tests/trybuild/resources/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/resources/unexpected_token.rs:8:35
  |
8 |     let resources = resources!(A, + B);
  |                                   ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$resources:expr`
 --> src/resource/mod.rs
  |
  |     ($resource:expr $(,$resources:expr)* $(,)?) => {
  |                        ^^^^^^^^^^^^^^^
